feat: 그룹 참여 중 인원 및 그룹 참여 신청 인원 조회 데이터 추가